made formatting changes

--- a/174_Co2.md
+++ b/174_Co2.md
@@ -11,12 +11,10 @@ output:
 \newpage
 
 ## Executive Summary
-The dataset I am using is monthly historical values of $CO_{2}$ measured in Hawaii. 
-Box-Jenkins methodology was used to build a model appropriate for this data through 
-model formulation, estimation, evaluation, and forecasting. 
-Two potential models were considered and compared. 
-The selected model was then used to forecast future $CO_{2}$ levels. 
-The forecasted values produced from the selected model were very accurate, 
+The dataset I am using is monthly historical values of $CO_{2}$ measured in Hawaii. Box-Jenkins methodology 
+was used to build a model appropriate for this data through model formulation, estimation, evaluation, and 
+forecasting. Two potential models were considered and compared. The selected model was then used to forecast 
+future $CO_{2}$ levels. The forecasted values produced from the selected model were very accurate, 
 as they aligned closely with our test data, and fell within the prediction interval.
   
 ## Introduction
@@ -51,10 +49,14 @@ co2.test <- co2[c(349:360)]
 plot(co2.train, type="l",main="CO2 Levels in Hawaii", xlab="Time", ylab="CO2 Level (ppm)")
 ```
 
-The plot of the $CO_{2}$ levels in Hawaii shows that the training data, $X_{t}$, is non-stationary because there is a trend and seasonality. There is a positive linear trend, as the data values steadily increase in an approximately straight line with time. There is seasonality because the data drops in value and then rises, at regular intervals. The data has a constant variance and contains no apparent sharp changes in behavior.
+The plot of the $CO_{2}$ levels in Hawaii shows that the training data, $X_{t}$, is non-stationary because 
+there is a trend and seasonality. There is a positive linear trend, as the data values steadily increase in 
+an approximately straight line with time. There is seasonality because the data drops in value and then rises, 
+at regular intervals. The data has a constant variance and contains no apparent sharp changes in behavior.
   
 ## Section 2: Differencing
-In order to make the data stationary, trend and seasonality must be eliminated. To eliminate trend, we difference at lag 1. Then, to eliminate seasonality, we difference at lag 12 because the data is monthly.\
+In order to make the data stationary, trend and seasonality must be eliminated. To eliminate trend, we 
+difference at lag 1. Then, to eliminate seasonality, we difference at lag 12 because the data is monthly.\
 
 ```{r, echo = FALSE}
 # difference at lag 1 to remove trend
@@ -73,9 +75,12 @@ var(y1);var(y12)
 ```
 \
   
-From the plot of the differenced data, we can see that trend was successfully eliminated, as the regression line is almost completely horizontal. We can also see that eliminating seasonality was necessary, as the variance decreased from 1.62961 to 0.200614. 
+From the plot of the differenced data, we can see that trend was successfully eliminated, as the regression 
+line is almost completely horizontal. We can also see that eliminating seasonality was necessary, as the 
+variance decreased from 1.62961 to 0.200614. 
   
-To check that the data is indeed stationary after differencing, the ACF and PACF plots of the differenced data are evaluated.
+To check that the data is indeed stationary after differencing, the ACF and PACF plots of the differenced 
+data are evaluated.
 
 \
   
@@ -92,11 +97,15 @@ Since we detect no trend or seasonality in the ACF and PACF plots, we conclude t
   
 ## Section 3: Preliminary Identification of Models
   
-Next, the ACF and PACF of the differenced data were analyzed for model identification. Referring back to the plots displayed in Section 2, the seasonal and nonseasonal terms for a $SARIMA(p,d,q)x(P,D,Q)_{s}$ model were determined.
+Next, the ACF and PACF of the differenced data were analyzed for model identification. Referring back to the 
+plots displayed in Section 2, the seasonal and nonseasonal terms for a $SARIMA(p,d,q)x(P,D,Q)_{s}$ model were determined.
 
-For the seasonal part of the model, Q = 1 is a good choice because the ACF shows a large peak at 1s. P is 0 because the PACF tails off at lags that are multiples of 12. D = 1 because there was one seasonal differencing taken. s = 12 because the data has monthly seasonality.
+For the seasonal part of the model, Q = 1 is a good choice because the ACF shows a large peak at 1s. P is 0 because 
+the PACF tails off at lags that are multiples of 12. D = 1 because there was one seasonal differencing taken. s = 12
+ because the data has monthly seasonality.
 
-For the non-seasonal part of the model, q = 1 is a good choice because the the ACF cuts off at lag 1. p = 0, 1, or 2 because the PACF either decays or cuts off at lag 2. d = 1 because one differencing was applied to remove trend.
+For the non-seasonal part of the model, q = 1 is a good choice because the the ACF cuts off at lag 1. p = 0, 1, or 2 
+because the PACF either decays or cuts off at lag 2. d = 1 because one differencing was applied to remove trend.
 
 \
 
@@ -131,7 +140,9 @@ arima(co2.train, order=c(0,1,1), seasonal=list(order=c(0,1,1), period=12), metho
 
 \
 
-After using the arima() function, we see that the standard errors are such that all the coefficients are significant. Using these coefficients and the SARIMA formula, Model 1 is (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$
+After using the arima() function, we see that the standard errors are such that all the coefficients are significant. 
+Using these coefficients and the SARIMA formula, Model 1 is (1-$B$)(1-$B^{12}$)$X_{t}$ = 
+(1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$
   
 ### Coefficient Estimation for Model 2
   
@@ -143,7 +154,9 @@ arima(co2.train, order=c(1,1,1), seasonal=list(order=c(0,1,1), period=12), metho
 
 \
 
-From the output, we see that the standard errors are such that all the coefficients are significant. With these coefficients and the SARIMA formula, we can write the formula for Model 2: (1-0.2013$B$)(1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.5489$B$)(1-0.8881$B^{12}$)$Z_{t}$
+From the output, we see that the standard errors are such that all the coefficients are significant. With these 
+coefficients and the SARIMA formula, we can write the formula for Model 2: (1-0.2013$B$)(1-$B$)(1-$B^{12}$)$X_{t}$ 
+= (1-0.5489$B$)(1-0.8881$B^{12}$)$Z_{t}$
   
   
 ### Check Stationarity and Invertibility of Model 1 and 2
@@ -156,7 +169,8 @@ Our two models are:
   
 2. Model 2: (1-0.2013$B$)(1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.5489$B$)(1-0.8881$B^{12}$)$Z_{t}$
   
-Both models are invertible because |$\theta_{1}$| < 1, and |$\Theta_{1}$| < 1 in both. Model 1 is stationary because it is a pure MA model. Model 2 is also stationary because |$\phi_{1}$| < 1.
+Both models are invertible because |$\theta_{1}$| < 1, and |$\Theta_{1}$| < 1 in both. Model 1 is stationary 
+because it is a pure MA model. Model 2 is also stationary because |$\phi_{1}$| < 1.
   
 ### Diagnostic Checking for Model 1
 
@@ -181,7 +195,8 @@ mean(res1)
 
 \
 
-The plot of the residuals looks approximately like white noise. This is further demonstrated by the fact that the regression line is very close to a horizontal line, and the sample mean is approximately 0.
+The plot of the residuals looks approximately like white noise. This is further demonstrated by the fact that the 
+regression line is very close to a horizontal line, and the sample mean is approximately 0.
   
 Next, to further verify that the residuals for Model 1 resemble white noise, we check the ACF and PACF plots.
 
@@ -214,7 +229,8 @@ qqline(res1,col="blue")
 
 \
 
-The histogram of the residuals looks Gaussian, and the line generated in the Normal Q-Q Plot is approximately straight, with only slight deviation, indicating that the residuals are normally distributed. 
+The histogram of the residuals looks Gaussian, and the line generated in the Normal Q-Q Plot is approximately 
+straight, with only slight deviation, indicating that the residuals are normally distributed. 
   
 To further check the normality assumption, we next conduct the Shapiro-Wilk normality test.
   
@@ -224,7 +240,8 @@ shapiro.test(res1)
 
 \
 
-Our residuals do not pass the Shapiro-Wilk normality test, as the p-value is less than our $\alpha$ value, 0.05. We therefore conclude that heavy-tailed model would work better. 
+Our residuals do not pass the Shapiro-Wilk normality test, as the p-value is less than our $\alpha$ value, 0.05. 
+We therefore conclude that heavy-tailed model would work better. 
   
 Next, we will conduct the Box-Pierce, Ljung-Box, and McLeod Li tests to test our white noise hypothesis.
   
@@ -241,19 +258,22 @@ Box.test(res1^2, lag=18, type=c("Ljung-Box"), fitdf=0)
 
 The data passes all three tests because the p-values are larger than 0.05. We fail to reject the white noise hypothesis.
   
-The last step of diagnostic checking is using Yule-Walker estimation to determine whether our residuals fit into an AR(0) model. 
+The last step of diagnostic checking is using Yule-Walker estimation to determine whether our residuals fit into an 
+AR(0) model. 
 ```{r, echo=FALSE}
 ar(res1, aic = TRUE, order.max = NULL, method = c("yule-walker"))
 ```
 
 \
 
-The Yule-Walker method selected order 0, so the residuals were fitted to AR(0), or white noise. With this, Model 1 passed diagnostic checking.
+The Yule-Walker method selected order 0, so the residuals were fitted to AR(0), or white noise. With this, Model 1 
+passed diagnostic checking.
   
   
 ### Diagnostic Checking for Model 2
 
-We repeat the diagnostic procedures for Model 2. First, we plot the residuals to see if they resemble Gaussian white noise, which would indicate that model 2 is a good fit.
+We repeat the diagnostic procedures for Model 2. First, we plot the residuals to see if they resemble Gaussian white 
+noise, which would indicate that model 2 is a good fit.
 
 \
 
@@ -275,7 +295,8 @@ mean(res2)
 
 \
 
-The plot of the residuals looks approximately like white noise. The regression line has a slight trend, but it is not very noticable, and the sample mean of the residuals is approximately zero. 
+The plot of the residuals looks approximately like white noise. The regression line has a slight trend, but it is not 
+very noticable, and the sample mean of the residuals is approximately zero. 
   
 Next, we plot the ACF and PACF of the residuals to check if they look like white noise.
 
@@ -291,7 +312,8 @@ pacf(residuals(fit2), main="PACF for Model 2")
 
 \
 
-The ACF and PACF plot of the residuals look like white noise because values at all lags are within the confidence intervals.
+The ACF and PACF plot of the residuals look like white noise because values at all lags are within the 
+confidence intervals.
 Next, to check the normality assumption, we plot a histogram of the residuals and a Normal Q-Q Plot.\
 \
 \
@@ -306,7 +328,8 @@ qqline(res2,col="blue")
 
 \
 
-The histogram of the residuals looks Gaussian, and the line Normal Q-Q Plot is approximately straight, with slight deviation, indicating that the residuals are normally distributed.
+The histogram of the residuals looks Gaussian, and the line Normal Q-Q Plot is approximately straight, with slight
+ deviation, indicating that the residuals are normally distributed.
   
 To further check the normality assumption of our Model 2 residuals, we next conduct the Shapiro-Wilk normality test.
   
@@ -316,7 +339,8 @@ shapiro.test(res2)
 
 \
 
-Our residuals do not pass the Shapiro-Wilk normality test, as the p-value is less than our $\alpha$ value, 0.05. We therefore conclude that heavy-tailed model would work better. 
+Our residuals do not pass the Shapiro-Wilk normality test, as the p-value is less than our $\alpha$ value, 
+0.05. We therefore conclude that heavy-tailed model would work better. 
   
 Next, we will test our white noise hypothesis of our residuals using the Box-Pierce, Ljung-Box, and McLeod Li tests. 
   
@@ -331,7 +355,8 @@ Box.test(res2^2, lag=18, type=c("Ljung-Box"), fitdf=0)
 
 \
 
-All three tests are passed because the p-values are all larger than 0.05. Therefore, we fail to reject the white noise hypothesis.
+All three tests are passed because the p-values are all larger than 0.05. Therefore, we fail to reject the 
+white noise hypothesis.
   
   
 Lastly, we use Yule-Walker estimation to determine whether our residuals fit into an AR(0) model. 
@@ -341,11 +366,13 @@ ar(res2, aic = TRUE, order.max = NULL, method = c("yule-walker"))
 
 \
 
-The Yule-Walker method selected order 0, so the residuals were fitted to AR(0), or white noise. With this, Model 2 also passed all the tests in diagnostic checking except the Shapiro-Wilk normality test.
+The Yule-Walker method selected order 0, so the residuals were fitted to AR(0), or white noise. With this, Model 2
+ also passed all the tests in diagnostic checking except the Shapiro-Wilk normality test.
   
 ### AICc for Model 1 and Model 2
   
-Next, we use the AICc() function to calculate the AICc (Akaike Information Criterion, Corrected for Bias) to compare the fit of Model 1 and 2.
+Next, we use the AICc() function to calculate the AICc (Akaike Information Criterion, Corrected for Bias) to compare
+ the fit of Model 1 and 2.
 
 \
 
@@ -368,11 +395,15 @@ AICc(arima(co2.train, order=c(2,1,1), seasonal=list(order=c(0,1,1), period=12), 
 
 \
 
-The AICc for Model 1 (215.1346) is lower than the AICc for Model 2 (216.8515). Also taking into consideration the fact that Model 1 has fewer coefficients than Model 2 does, we choose Model 1, (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$, as the final model based on the principle of parsimony and the AICc. 
+The AICc for Model 1 (215.1346) is lower than the AICc for Model 2 (216.8515). Also taking into consideration 
+the fact that Model 1 has fewer coefficients than Model 2 does, we choose Model 1, (1-$B$)(1-$B^{12}$)$X_{t}$ = 
+(1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$, as the final model based on the principle of parsimony and the AICc. 
 
 ## Forecasting
   
-Next, we use our final model, (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$, to forecast the next 12 months. We graph our prediction interval (green lines) and compare our forecasted values (red dots) to our test data (blue dots).
+Next, we use our final model, (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$, to forecast 
+the next 12 months. We graph our prediction interval (green lines) and compare our forecasted values (red dots) 
+to our test data (blue dots).
 
 \
 
@@ -397,11 +428,16 @@ legend("topleft", pch=1, col=c("red", "blue"),
 
 \
 
-From the plot of our forecasted data, we can see that the 12 forecasted values align very closely with the true test values, and they lie within the prediction intervals. This indicates that our model is very accurate for forecasting data.
+From the plot of our forecasted data, we can see that the 12 forecasted values align very closely with the true 
+test values, and they lie within the prediction intervals. This indicates that our model is very accurate for 
+forecasting data.
 
 
 ## Conclusion
-The goal of this project was to use the historical values of $CO_{2}$ in Hawaii to build a model, via Box-Jenkins methodology, to forecast future $CO_2$ levels. This goal was achieved. We evaluated two potential models. The final model chosen was (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$. Using this model, the forecasted data was very accurate. 
+The goal of this project was to use the historical values of $CO_{2}$ in Hawaii to build a model, via Box-Jenkins 
+methodology, to forecast future $CO_2$ levels. This goal was achieved. We evaluated two potential models. 
+The final model chosen was (1-$B$)(1-$B^{12}$)$X_{t}$ = (1-0.3779$B$)(1-0.8862$B^{12}$)$Z_{t}$. Using this model,
+ the forecasted data was very accurate. 
   
 ## References
 
